force-app/main/default/objects/Price_Glossary__c/Price_Glossary__c.object-meta.xml
<CustomObject>
    <label>Price Glossary</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Price Glossary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Glossaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>