force-app/main/default/objects/Price_Glossary__c/fields/List_Price__c.field-meta.xml
<CustomField>
        <fullName>List_Price__c</fullName>
        <description>List price for the product based off of the applicable attribute data</description>
        <inlineHelpText>List price for the product based off of the applicable attribute data</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>