force-app/main/default/objects/Price_Glossary__c/fields/Lower_Bound__c.field-meta.xml
<CustomField>
        <fullName>Lower_Bound__c</fullName>
        <description>Lower bound of lookup table&apos;s tiered pricing.</description>
        <inlineHelpText>Lower bound of lookup table&apos;s tiered pricing.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>