force-app/main/default/objects/Price_Glossary__c/fields/Product__c.field-meta.xml
<CustomField>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Glossaries</relationshipLabel>
        <relationshipName>Price_Glossaries</relationshipName>
        <type>Lookup</type>
    </CustomField>