force-app/main/default/objects/Price_Glossary__c/fields/Upper_Bound__c.field-meta.xml
<CustomField>
        <fullName>Upper_Bound__c</fullName>
        <description>Upper bound of lookup table&apos;s tiered pricing.</description>
        <inlineHelpText>Upper bound of lookup table&apos;s tiered pricing.</inlineHelpText>
        <label>Upper Bound</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>