force-app/main/default/objects/Price_Glossary__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Lower_Bound__c</columns>
        <columns>Upper_Bound__c</columns>
        <columns>List_Price__c</columns>
        <columns>Revenue_Type__c</columns>
        <columns>License_Metric__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Price_Glossary_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>